Fixed the grid system overflowing the bounds of the body.

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,8 @@ p {
   background-color:#a5b5b7;
   text-align: center;
   padding-bottom: 10px;
+  margin-lef:0px;
+  margin-right:0px;
 }
 
 .brief {
